# ShaderToyAndroid

./: readme.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: vertex_shader.glsl
app/src/main/assets/shader/art/: art.glsl
app/src/main/assets/shader/barber/: barber.glsl
app/src/main/assets/shader/blobby/: blobby.glsl
app/src/main/assets/shader/blockalitos/: blockalitos.glsl
app/src/main/assets/shader/bouncing/: bouncing.glsl
app/src/main/assets/shader/clock/: clock.glsl
app/src/main/assets/shader/colorpicker/: colorpicker.glsl
app/src/main/assets/shader/fish/: fish.glsl
app/src/main/assets/shader/flame/: flame.glsl
app/src/main/assets/shader/liquid_glass/: liquid_glass.glsl
app/src/main/assets/shader/mario/: mario.glsl
app/src/main/assets/shader/metalballs/: metalballs.glsl
app/src/main/assets/shader/ocean/: ocean.glsl
app/src/main/assets/shader/octagrams/: octagrams.glsl
app/src/main/assets/shader/plasma/: plasma.glsl
app/src/main/assets/shader/primitive/: primitive.glsl
app/src/main/assets/shader/raining/: raining.glsl
app/src/main/assets/shader/rainstorm/: rainstorm.glsl
app/src/main/assets/shader/simple/: simple.glsl
app/src/main/cpp/: ShaderToyAndroid.cpp
app/src/main/cpp/app/: ShaderToyApp.cpp  ShaderToyApp.h
app/src/main/cpp/base/: AssetManager.cpp  AssetManager.h  matrix_util.h  native_log.h
app/src/main/cpp/filter/: ShaderToyFilter.cpp  ShaderToyFilter.h
app/src/main/res/layout/: activity_shader_toy.xml
app/src/main/res/values/: strings.xml
(+21 files in other folders)
